--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "express": "^4.16.4",
         "mongoose": "^5.3.8",
         "socket.io": "^2.1.1",
-        "webpack": "^4.23.1"
+        "vue": "^2.5.17"
     },
     "devDependencies": {
         "css-loader": "^1.0.1",
@@ -24,6 +24,7 @@
         "vue-loader": "^15.4.2",
         "vue-style-loader": "^4.1.2",
         "vue-template-compiler": "^2.5.17",
+        "webpack": "^4.23.1",
         "webpack-cli": "^3.1.2"
     }
 }
